@@ -1,3 +1,5 @@
+* Fill move line's origin with statement line
+
 Version 5.8.0 - 2020-11-02
 * Bug fixes (see mercurial logs for details)
 * Remove support for Python 3.5
